[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/015_Deck_Empty.png" type="Texture" id=3]
[ext_resource path="res://assets/015_Deck.png" type="Texture" id=4]
[ext_resource path="res://PlayerField/HandRegion.gd" type="Script" id=5]

[node name="Field" type="Node2D"]
script = ExtResource( 5 )

[node name="PlayerHand" type="Node" parent="."]

[node name="PlayerDeck" type="TextureButton" parent="."]
margin_left = 1600.0
margin_top = 750.0
margin_right = 2127.0
margin_bottom = 1482.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayerDeck" to="." method="_on_PlayerDeck_pressed"]
